# lexis-rust-os

./: Cargo.toml  README.md
src/: main.rs  vga_buffer.rs
